force-app/main/default/objects/Campaign/fields/AverageDaysToConvertToAccount__c.field-meta.xml
<CustomField>
    <fullName>AverageDaysToConvertToAccount__c</fullName>
    <formula>SumDaysTakesToConvertToAccount__c /  NumberOfMembersConvertedToAccount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tiempo promedio en días que tardan los candidatos de la campaña en convertirse a cuenta.</inlineHelpText>
    <label>Promedio en convertirse a cuenta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>