force-app/main/default/objects/Campaign/fields/AverageForMaking1stVisit__c.field-meta.xml
<CustomField>
    <fullName>AverageForMaking1stVisit__c</fullName>
    <formula>SumTimeToMakeFirstVisit__c /  NumberMembersWith1stVisit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tiempo promedio en días que tardan los candidatos de la campaña en realizar la primera visita.</inlineHelpText>
    <label>Promedio en realizar la 1ª visita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>