force-app/main/default/objects/Campaign/fields/CostPerLead__c.field-meta.xml
<CustomField>
    <fullName>CostPerLead__c</fullName>
    <formula>ActualCost /  (NumberOfLeads +  NumberOfContacts - NumberOfConvertedLeads)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste por lead</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>