force-app/main/default/objects/Campaign/fields/CostPerSale__c.field-meta.xml
<CustomField>
    <fullName>CostPerSale__c</fullName>
    <formula>ActualCost /  NumberOfReservedOpportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste por venta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>