force-app/main/default/objects/Campaign/fields/NumberMembersWith1stVisit__c.field-meta.xml
<CustomField>
    <fullName>NumberMembersWith1stVisit__c</fullName>
    <label>Número de miembros con 1ª visita</label>
    <summaryFilterItems>
        <field>CampaignMember.TimeToMakeFirstVisit__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>