force-app/main/default/objects/Campaign/fields/NumberOfMembersConvertedToAccount__c.field-meta.xml
<CustomField>
    <fullName>NumberOfMembersConvertedToAccount__c</fullName>
    <label>Número de miembros convertidos a cuenta</label>
    <summaryFilterItems>
        <field>CampaignMember.DaysTakesToConvertToAccount__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>