force-app/main/default/objects/Campaign/fields/NumberOfReservedOpportunities__c.field-meta.xml
<CustomField>
    <fullName>NumberOfReservedOpportunities__c</fullName>
    <label>Número de Oportunidades Reservadas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>