force-app/main/default/objects/Campaign/fields/SumDaysTakesToConvertToAccount__c.field-meta.xml
<CustomField>
    <fullName>SumDaysTakesToConvertToAccount__c</fullName>
    <label>Suma días en convertirse a cuenta</label>
    <summarizedField>CampaignMember.DaysTakesToConvertToAccount__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>