force-app/main/default/objects/Campaign/fields/SumTimeToMakeFirstVisit__c.field-meta.xml
<CustomField>
    <fullName>SumTimeToMakeFirstVisit__c</fullName>
    <label>Suma de tiempo en realizar 1ª visita</label>
    <summarizedField>CampaignMember.TimeToMakeFirstVisit__c</summarizedField>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>